        merged before when there are reverse-[Pre-]Depends.
      - Prefer temporary breaking reverse-Depends than anything else.
        (Closes: #637233)
      - Don't modify first-level priorities of non-first subactions of
        the same package, except of incrementing prioties for
        unpack-after-removal actions.
    - config:
      - New option 'cupt::cache::release-file-expiration::ignore'.
      - Use APT option 'acquire::http::allowredirect' instead of Cupt-specific
        'acquire::http::allow-redirects'.
      - New option 'cupt::update::check-release-files'. Thanks to
        Karol Kozłowski for the suggestion. (Closes: #633492)
      - Support Cupt-specific configuration files (/etc/cupt by default).
        New options 'cupt::directory::configuration',
        'cupt::directory::configuration::main',
        'cupt::directory::configuration::main-parts'.
    - cache:
      - 'verifySignature': is deprecated now.
    - system/resolvers/native:
      - Implemented 'reinstall or remove' for packages that require the
        reinstallation.
      - Installed packages with the status 'half-installed' also require
        the reinstallation, mark them as such. (Closes: #637490)
  * doc:
    - cupt(1) manual:
      - Documented 'purge' subcommand.

 -- Eugene Lyubimkin <ext-lyubimkin.eugene@nokia.com>  Wed, 13 Jul 2011 09:33:27 +0300

cupt (2.1.2~) UNRELEASED; urgency=low

  * console:
    - Fixed a crash (under certain conditions) when package wildcards are
      used within the 'shell' subcommand. Thanks to Karol Kozłowski for the
      report.
  * lib:
    - Fixed a double use of va_list. Thanks to Julian Andres Klode for the
      report and the patch. (Closes: #630824)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 20 Jun 2011 19:07:35 +0300

cupt (2.1.1) unstable; urgency=low

  * lib:
    - download/manager:
      - Use poll(2) instead of SO_RCVTIMEO socket property to check for worker